--- a/css/pages/contact-us.css
+++ b/css/pages/contact-us.css
@@ -1,17 +1,15 @@
-
 .about-container {
     margin-top: 4%;
-
 }
 
-.content{
+.content {
     display: flex;
     margin-top: 5%;
     margin-bottom: 5%;
     margin-left: 13%;
 }
 
-.content-text{
+.content-text {
     margin-top: 40%;
     margin-left: 50px;
     display: flex;
@@ -21,97 +19,89 @@
     font-size: 5vw;
 }
 
-.about-text{
+.about-text {
     height: 25vh;
-    
 }
 
-
-
-.content-gratitude h1{
+.content-gratitude h1 {
     font-size: 2.2vw;
 }
 
-.content-gratitude p{
+.content-gratitude p {
     font-size: 1.5vw;
 }
 
-.content-contact{
+.content-contact {
     margin-left: 15%; 
 }
 
-.content-contact h1{
+.content-contact h1 {
     font-size: 2vw;
 }
 
-.content-contact p{
+.content-contact p {
     font-size: 1.3vw;
 }
+
+/* Viewport */
+
+/* Tablet */
 
 @media (max-width: 768px) {
     .about-text h1 {
         font-size: 7vw;
     }
-    
-    .about-text{
+
+    .about-text {
         height: 35vh;
-        
     }
-    
-    .content-gratitude h1{
+
+    .content-gratitude h1 {
         font-size: 3.5vw;
     }
-    
-    .content-gratitude p{
+
+    .content-gratitude p {
         font-size: 2.5vw;
     }
-    
-   
-    
-    .content-contact h1{
+
+    .content-contact h1 {
         font-size: 3.2vw;
     }
-    
-    .content-contact p{
+
+    .content-contact p {
         font-size: 2.2vw;
-        
     }
-    
 }
 
+/* Mobile */
 
 @media (max-width: 425px) {
-    
     .about-text h1 {
         font-size: 7vw;
     }
-    
-    .about-text{
+
+    .about-text {
         height: 35vh;
-        
     }
-    
-    .content-gratitude h1{
+
+    .content-gratitude h1 {
         font-size: 3.5vw;
     }
-    
-    .content-gratitude p{
+
+    .content-gratitude p {
         font-size: 2.5vw;
     }
-    
-    .content-contact{
+
+    .content-contact {
         margin-left: 5%; 
         margin-right: 7%;
     }
-    
-    .content-contact h1{
+
+    .content-contact h1 {
         font-size: 3.5vw;
     }
-    
-    .content-contact p{
-        font-size: 2.5vw;
-        
-    }
-    
 
+    .content-contact p {
+        font-size: 2.5vw;
+    }
 }
