--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -1,5 +1,3 @@
-/* Base styles (already present in your code) */
-
 * {
     box-sizing: border-box; 
     padding: 0;
@@ -33,7 +31,6 @@ header {
     width: 100%;
     box-shadow: 0 0 7px rgba(0, 0, 0, 0.4);
     height: auto;
-
 }
 
 #logo-container {
@@ -56,7 +53,6 @@ header {
     background-color: #006125;
     color: #ffffff;
     width: auto;
-
 }
 
 .site-title {
@@ -74,23 +70,19 @@ header {
     margin-left: 5%; 
 }
 
-/* Remove underline and add transition effect for navbar links */
 #navbar-left a, #navbar-right a {
     color: #242424;
     text-align: center;
-    text-decoration: none; /* Remove underline */
+    text-decoration: none; 
     font-size: 1vw; 
     line-height: 25px;
     position: relative;
-    transition: color 0.3s ease; /* Smooth color transition */
+    transition: color 0.3s ease; 
 }
 
-/* Hover effect: lighten color slightly */
 #navbar-left a:hover, #navbar-right a:hover {
-    color: #007c0e; /* Slightly lighter color on hover */
+    color: #007c0e; 
 }
-
-
 
 #navbar-right {
     margin-left: auto;
@@ -102,38 +94,30 @@ header {
     background-color: #000000;
     color: white;
     padding: 3%;
-
 }
 
-.contact{
+.contact {
     padding-left: 20%;
 }
 
-
-/* Media Queries */
-
-/* Style for the hamburger menu */
-/* Hamburger Menu Styling */
 .hamburger-menu {
-    display: none; /* Default hidden, will be shown in media query */
+    display: none; 
     font-size: 1.5rem;
     background: none;
     border: none;
     color: #d1d1d1;
     cursor: pointer;
-    z-index: 1100; /* Ensure the button stays above the menu */
- 
+    z-index: 1100; 
 }
 
-/* Media Query for Mobile Devices */
-
+/* Viewport */
 
 /* Tablet */
+
 @media (max-width: 768px) {
     .header-container {
         flex-direction: column;
         align-items: flex-start;
-        
     }
 
     #logo-container {
@@ -143,29 +127,29 @@ header {
     }
 
     .logo {
-        width: 10%; /* Smaller logo */
+        width: 10%; 
     }
 
     #navbar-left, #navbar-right {
         width: 100%;
-        justify-content:center; /* Space out items evenly */
-        padding: 0; /* Remove extra padding */
+        justify-content: center; 
+        padding: 0; 
     }
 
     #navbar-left a, #navbar-right a {
-        font-size: 2vw; /* Increase font size for better readability */
-        padding: 2vw; /* Increase padding for touch targets */
+        font-size: 2vw; 
+        padding: 2vw; 
     }
 
-    #navbar-left a{
+    #navbar-left a {
         padding-right: 2%;
     }
 
-    #navbar-left{
+    #navbar-left {
         margin-left: 2%;
     }
 
-    #navbar-right{
+    #navbar-right {
         margin-right: -3%;
     }
 
@@ -182,65 +166,16 @@ header {
         background-color: #000000;
         color: white;
         padding: 3%;
-    
     }
     
-    .contact{
+    .contact {
         padding-left: 20%;
     }
-
-    
 }
-
-
-/* Laptop  */
-@media (min-width:  769px) and (max-width: 1440px) {
-    .header-container {
-        flex-direction: row;
-        align-items: center;
-        height: auto;
-    }
-
-    #navbar-right {
-        padding-right: 5%;
-    }
-
-    #logo-container {
-        width: 35%;
-    }
-
-    .logo {
-        width: 38%; /* Slightly larger logo for tablets */
-        margin-left: 7%;
-    }
-
-    .site-title {
-        font-size: 1.8vw; /* Larger font size */
-    }
-
-    #navbar-left a, #navbar-right a {
-        font-size: 1.3vw; /* Adjust font size */
-        padding: 1vw; /* Adjust padding */
-    }
-
-    .footer {
-        font-size: 1.2vw;
-        display: flex;
-        justify-content: center;
-        background-color: #000000;
-        color: white;
-        padding: 3%;
-    }
-    
-    .contact{
-        padding-left: 20%;
-    }
-    
-}
-
 
 /* Laptop */
-@media (min-width:  769px) and (max-width: 1440px) {
+
+@media (min-width: 769px) and (max-width: 1440px) {
     .header-container {
         flex-direction: row;
         align-items: center;
@@ -256,17 +191,17 @@ header {
     }
 
     .logo {
-        width: 38%; /* Slightly larger logo for tablets */
+        width: 38%; 
         margin-left: 7%;
     }
 
     .site-title {
-        font-size: 1.8vw; /* Larger font size */
+        font-size: 1.8vw; 
     }
 
     #navbar-left a, #navbar-right a {
-        font-size: 1.3vw; /* Adjust font size */
-        padding: 1vw; /* Adjust padding */
+        font-size: 1.3vw; 
+        padding: 1vw; 
     }
 
     .footer {
@@ -276,18 +211,16 @@ header {
         background-color: #000000;
         color: white;
         padding: 3%;
-    
     }
     
-    .contact{
+    .contact {
         padding-left: 20%;
     }
-    
 }
 
-/* Large Devices (Desktops) */
-@media (min-width: 1441px) {
+/* Mobile */
 
+@media (min-width: 1441px) {
     #logo-container {
         width: 30%;
         padding-left: 0;
@@ -295,54 +228,49 @@ header {
     }
 
     #navbar-left a, #navbar-right a {
-        font-size: 1vw; /* Standard size */
-        padding: 1.5vw; /* Standard padding */
+        font-size: 1vw; 
+        padding: 1.5vw; 
     }
 
-    
     .site-title {
         font-size: 1.2vw; 
         margin-right: 12%;
     }
 
     .logo {
-        height: 20%; /* Standard logo height */
+        height: 20%; 
     }
 }
 
 @media (max-width: 425px) {
-
-    #desc{
+    #desc {
         font-size: 3.5vw;
         margin-top: 2%;
     }
 
     .site-title {
-        margin-right: 30%; /* Adjust margin as needed */
+        margin-right: 30%; 
         font-size: 3.5vw;
     }
 
     .logo {
-        width: 20%; /* Adjust logo size for mobile */
+        width: 20%; 
         margin-left: 20%;
     }
 
-    .logo-title{
+    .logo-title {
         padding: 2%;
     }
 
-    
-    /* Show the hamburger menu on small screens */
     .hamburger-menu {
-        display: block; /* Show hamburger menu */
+        display: block; 
     }
 
-    /* Make Navbar a Sliding Menu from Left */
     #navbar {
-        display: none; /* Initially hidden */
+        display: none; 
         flex-direction: column;
         width: 70%;
-        background-color: rgb(255, 255, 255); /* Slightly transparent background */
+        background-color: rgb(255, 255, 255); 
         position: fixed;
         top: 0;
         left: 0;
@@ -352,13 +280,11 @@ header {
         z-index: 1000;
     }
 
-    /* Adjust Navbar Links */
     #navbar-left a, #navbar-right a {
-        font-size: 4vw; /* Increase font size for readability */
+        font-size: 4vw; 
         padding: 15px;
     }
 
-    /* Vertically Arranged Navbar Links */
     #navbar-left, #navbar-right {
         flex-direction: column;
         width: 100%;
@@ -366,14 +292,12 @@ header {
         padding-left: 20px;
     }
 
-    /* Navbar Links with Border for Separation */
     #navbar a {
         border-bottom: 1px solid #f0f0f0;
     }
 
-    /* Display Navbar When Menu is Open */
     .navbar-open #navbar {
-        display: flex; /* Show navbar when open */
+        display: flex; 
     }
 
     .footer {
@@ -385,8 +309,7 @@ header {
         padding: 5%;
     }
 
-    .contact{
+    .contact {
         padding-left: 5%;
     }
 }
-
