--- a/css/pages/donate-thank-you.css
+++ b/css/pages/donate-thank-you.css
@@ -1,5 +1,3 @@
-
-
 .thank-you-container{
     text-align: center;
     margin-top: 10%;
@@ -15,7 +13,9 @@
     border-radius: 50px;
 }
 
+/* Viewport */
 
+/* Mobile  */
 @media (max-width: 425px) {
     
     .thank-you-container{
