--- a/css/pages/donate.css
+++ b/css/pages/donate.css
@@ -1,14 +1,13 @@
 .donation-form-container {
-    max-width: 50vw; /* Increased width */
+    max-width: 50vw; 
     margin: 0 auto;
-    padding: 3vw; /* Increased padding */
+    padding: 3vw; 
     background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-top: 3%;
     margin-bottom: 3%;
 }
-
 
 label {
     display: block;
@@ -17,10 +16,11 @@ label {
 }
 
 input[type="number"],
-input[type="email"],input[type=name],    
+input[type="email"],
+input[type="name"],    
 textarea {
     width: 100%;
-    padding: 12px; /* Increased padding */
+    padding: 12px; 
     margin-bottom: 15px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -28,13 +28,13 @@ textarea {
 }
 
 .button-container {
-    display: flex; /* Flexbox for button alignment */
-    justify-content: space-between; /* Space between buttons */
+    display: flex; 
+    justify-content: space-between; 
 }
 
 button {
-    width: 48%; /* Set button width to fill space */
-    padding: 12px; /* Increased padding */
+    width: 48%; 
+    padding: 12px; 
     background-color: #006125;
     color: white;
     border: none;
@@ -49,17 +49,20 @@ button:hover {
 }
 
 .reset-button {
-    background-color: #b43636; /* Light color for reset button */
-    color: #ffffff; /* Dark text color for visibility */
+    background-color: #b43636; 
+    color: #ffffff; 
 }
 
 .reset-button:hover {
-    background-color: #742727; /* Darker on hover */
+    background-color: #742727; 
 }
+
+/* Viewport */
+
+/* Mobile */
 
 @media (max-width: 425px) {
     .donation-form-container {
-        max-width: 80vw; /* Increased width */
-
+        max-width: 80vw; 
     }
 }
