--- a/css/pages/donate.css
+++ b/css/pages/donate.css
@@ -17,7 +17,8 @@ label {
 
 input[type="number"],
 input[type="email"],
-input[type="name"],    
+input[type="name"], 
+input[type="text"],   
 textarea {
     width: 100%;
     padding: 12px; 
@@ -32,7 +33,9 @@ textarea {
     justify-content: space-between; 
 }
 
-button {
+button, .join-button {
+    text-align: center;
+    text-decoration: none;
     width: 48%; 
     padding: 12px; 
     background-color: #006125;
